[vr] AddParentUiElement should not reorder elements

Previously, this would end up sticking the parent element at the end of
the child list.

Bug: 822283
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I840edc68a37243d20b24c62a8ab85743c2d42e83
Reviewed-on: https://chromium-review.googlesource.com/1047345
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556487}
Former-commit-id: 878926799972445a4a82377faffbc2c9a2a0ceac